# hot-dog-detector

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  opencv.cpp  opencv.h
